@@ -1,0 +1,6 @@
+#include "textboxtest.h"
+
+int main(int argc, char* argv[]) {
+	TextBoxTest app;
+	return app.main(argc, argv);
+}
